--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react": "^19.2.0",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.0",
+    "react-loader-spinner": "^8.0.0",
     "react-router-dom": "^7.11.0",
     "tailwindcss": "^4.1.18"
   },
